# lyntra

./: .gitignore  README.md  app.py
src/: __init__.py
src/agents/: pyproject.toml
src/agents/portfolio_generator/: portfolio_flow.py
src/agents/portfolio_generator/crews/: css_generator.py  html_generator.py  js_generator.py
src/agents/portfolio_generator/crews/config/agents/: css_agent.yaml  html_agent.yaml  js_agent.yaml
src/agents/portfolio_generator/crews/config/tasks/: css_task.yaml  html_task.yaml  js_task.yaml
src/core/: views.py
src/templates/: generate_portfolio.html  index.html
