[project]
name = "portfolio_generator"
version = "0.1.0"
description = "Generate a portfolio website using crewAI"
authors = [{ name = "Kashyap Patel", email = "kashypatel22@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0",
]

[project.scripts]
kickoff = "portfolio_generator.main:kickoff"
plot = "portfolio_generator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
